--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,18 @@
 /staging_dir
 /tmp
 /logs
-/feeds
-!/feeds/packages/libs/libmodbus
+/feeds/*
+!/feeds/luci/
+/feeds/luci/*
+!/feeds/luci/modules/
+/feeds/luci/modules/*
+!/feeds/luci/modules/luci-base
+!/feeds/luci/modules/luci-mod-control
+!/feeds/luci/modules/luci-mod-network
+!/feeds/luci/modules/luci-mod-status
+!/feeds/luci/modules/luci-mod-system
+!/feeds/luci/applications/
+/feeds/luci/applications/*
 /feeds.conf
 /files
 /target/linux/feeds
